tools/s4/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s4
  labels:
    app: s4
spec:
  selector:
    app: s4
  ports:
    - name: web-ui
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: s3-api
      port: 7480
      targetPort: 7480
      protocol: TCP
